@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
  
-/* $Id: php_sybase_ct.c,v 1.37 2000/10/25 17:44:01 andrei Exp $ */
+/* $Id: php_sybase_ct.c,v 1.38 2000/11/03 02:46:49 zeev Exp $ */
 
 
 #include "php.h"
@@ -687,10 +687,14 @@ PHP_FUNCTION(sybase_close)
 	
 	ZEND_FETCH_RESOURCE2(sybase_ptr, sybase_link *, &sybase_link_index, id, "Sybase-Link", le_link, le_plink);
 	
-	if (sybase_link_index) {
-		zend_list_delete(sybase_link_index->value.lval);
-	} else {
-		zend_list_delete(id);
+	if (id==-1) { /* explicit resource number */
+		zend_list_delete(Z_RESVAL_P(sybase_link_index));
+	}
+
+	if (id!=-1 
+		|| (sybase_link_index && Z_RESVAL_P(sybase_link_index)==SybCtG(default_link))) {
+		zend_list_delete(SybCtG(default_link));
+		SybCtG(default_link) = -1;
 	}
 
 	RETURN_TRUE;
